<resources>
    <string name="app_name">zmc_04_layout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">login</string>
    <string name="other_connect_choose">or connect with</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
</resources>